update ui & timeout

--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -211,7 +211,7 @@
   },
   "error": {
     "default": "Something went wrong, please try again later or contact us to fix it.",
-    "tooFrequent": "We've sent you the code. If you want to resend email, please wait for 5 minutes.",
+    "tooFrequent": "We've sent you the code. Please check your email or try again 10 minutes later.",
     "invalidCode": "Invalid code"
   }
 }
