--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -211,7 +211,7 @@
   },
   "error": {
     "default": "发生错误，请重新再试，若状况持续，请联繫我们，谢谢！",
-    "tooFrequent": "驗證碼已寄送。5 分鐘後可再重寄",
+    "tooFrequent": "验证码已寄送，请至信箱查看。或是于 10 分钟后再试一次。",
     "invalidCode": "无效的验证码"
   }
 }
