--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -23,7 +23,8 @@
     "memo": "Memo",
     "copy": "Copied!",
     "exportTitle": "Export",
-    "exportHint": "Export the transaction list into a pdf"
+    "exportHint": "Export the transaction list into a pdf",
+    "exportHintMore": "Export the transaction list into a pdf. There are {{n}} records in this book. It is recommeded to export pdf with computer."
   },
   "landing": {
     "title": "Bunny Bill",
@@ -160,14 +161,17 @@
     "shareWithFriend": "Share With Friends",
     "shareText": "I'd like to share \"{{book}}\" with you. Please click the link.",
     "shareLink": "Share Link",
-    "inputId": "Enter friend ID",
+    "inputEmail": "Enter friend's Email",
     "edit": "Edit Profile",
     "deleteHint": "Delete \"{{nickname}}\"?",
     "self": "Me",
     "selfHint1": "set \"{{nickname}}\" as me",
     "selfHint2": "\"{{nickname}}\" is not me",
-    "friendPlaceholder": "Friend ID",
-    "friendHint": "The ID can be found in System Setting"
+    "emailPlaceholder": "aaa@xxxmail.com",
+    "friendHint": "The ID can be found in System Setting",
+    "warning1": "Note: The friend's email must be synced to his/her device first",
+    "warning2": "You can bind it in System Settings or find",
+    "warning3": "from book list page."
   },
   "share": {
     "join": "Join this Book?",
@@ -212,6 +216,7 @@
   "error": {
     "default": "Something went wrong, please try again later or contact us to fix it.",
     "tooFrequent": "We've sent you the code. Please check your email or try again 10 minutes later.",
-    "invalidCode": "Invalid code"
+    "invalidCode": "Invalid code",
+    "invalidEmail": "This Email is not synced by any device"
   }
 }
