--- a/frontend/public/locale/jp/common.json
+++ b/frontend/public/locale/jp/common.json
@@ -23,7 +23,8 @@
     "memo": "メモ",
     "copy": "コピー成功！",
     "exportTitle": "エクスポート",
-    "exportHint": "取引明細をPDFファイルにエクスポートする"
+    "exportHint": "取引明細をPDFファイルにエクスポートする",
+    "exportHintMore": "Export the transaction list into a pdf. There are {{n}} records in this book. It is recommeded to export pdf with computer."
   },
   "landing": {
     "title": "Bunny Bill",
@@ -160,14 +161,17 @@
     "shareWithFriend": "帳簿を友達と共有する",
     "shareText": "帳簿「{{book}}」を共有するには、リンクをクリックしてください",
     "shareLink": "リンクを共有",
-    "inputId": "友達のID入力",
+    "inputEmail": "友達のEmail入力",
     "edit": "メンバー編集",
     "deleteHint": "「{{nickname}}」を削除しますか？",
     "self": "私",
     "selfHint1": "「{{nickname}}」がニックネームを設定",
     "selfHint2": "「{{nickname}}」はニックネームではない",
-    "friendPlaceholder": "友達の ID",
-    "friendHint": "ユーサのIDはシステム設定で確認できます"
+    "emailPlaceholder": "aaa@xxxmail.com",
+    "friendHint": "The ID can be found in System Setting",
+    "warning1": "Note: The friend's email must be synced to his/her device first",
+    "warning2": "You can bind it in System Settings or find",
+    "warning3": "from book list page."
   },
   "share": {
     "join": "帳簿に参加しますか？",
@@ -212,6 +216,7 @@
   "error": {
     "default": "エラーが発生しました。再試行してください。状況が続く場合は、お問い合わせください、ありがとうございます。",
     "tooFrequent": "We've sent you the code. Please check your email or try again 10 minutes later.",
-    "invalidCode": "Invalid code"
+    "invalidCode": "Invalid code",
+    "invalidEmail": "This Email is not synced by any device"
   }
 }
