--- a/frontend/public/locale/zh-TW/common.json
+++ b/frontend/public/locale/zh-TW/common.json
@@ -23,7 +23,8 @@
     "memo": "備註",
     "copy": "複製成功！",
     "exportTitle": "匯出",
-    "exportHint": "將收支明細匯出成一個 pdf 檔"
+    "exportHint": "將收支明細匯出成一個 pdf 檔",
+    "exportHintMore": "將收支明細匯出成一個 pdf 檔。此帳本中有 {{n}} 筆紀錄，建議使用電腦匯出。"
   },
   "landing": {
     "title": "Bunny Bill",
@@ -160,14 +161,17 @@
     "shareWithFriend": "與好友共享帳本",
     "shareText": "與你共享帳本「{{book}}」，請點擊連結",
     "shareLink": "分享連結",
-    "inputId": "輸入好友 ID",
+    "inputEmail": "輸入好友Email",
     "edit": "編輯資料",
     "deleteHint": "要刪除「{{nickname}}」嗎？",
     "self": "我",
     "selfHint1": "將「{{nickname}}」設定為我的暱稱",
     "selfHint2": "「{{nickname}}」不再是我的暱稱",
-    "friendPlaceholder": "好友 ID",
-    "friendHint": "使用者ID顯示在系統設定"
+    "emailPlaceholder": "aaa@xxxmail.com",
+    "friendHint": "使用者ID顯示在系統設定",
+    "warning1": "注意：好友的Email 須先在他的裝置進行綁定",
+    "warning2": "可在「系統設定」的「資料同步」中，或從",
+    "warning3": "進行綁定。"
   },
   "share": {
     "join": "加入此帳本？",
@@ -212,6 +216,7 @@
   "error": {
     "default": "發生錯誤，請重新再試，若狀況持續，請聯繫我們，謝謝！",
     "tooFrequent": "驗證碼已寄送，請至信箱查看。或是於 10 分鐘後再試一次。",
-    "invalidCode": "無效的驗證碼"
+    "invalidCode": "無效的驗證碼",
+    "invalidEmail": "此Email尚未綁定於任何裝置"
   }
 }
