--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -168,8 +168,8 @@
     "selfHint1": "set \"{{nickname}}\" as me",
     "selfHint2": "\"{{nickname}}\" is not me",
     "emailPlaceholder": "aaa@xxxmail.com",
-    "friendHint": "The ID can be found in System Setting",
-    "warning1": "Note: The friend's email must be synced to his/her device first",
+    "friendHint": "Please input your friend's email",
+    "warning1": "Note: Your friend's email must be synced to his/her device first",
     "warning2": "You can bind it in System Settings or find",
     "warning3": "from book list page."
   },
