--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -168,7 +168,7 @@
     "selfHint1": "将「{{nickname}}」设定为我的暱称",
     "selfHint2": "「{{nickname}}」不再是我的暱称",
     "emailPlaceholder": "aaa@xxxmail.com",
-    "friendHint": "使用者ID显示在系统设定",
+    "friendHint": "请输入好友的绑定Email",
     "warning1": "注意：好友的Email 须先在他的装置进行绑定",
     "warning2": "可在「系统设定」的「资料同步」中，或从",
     "warning3": "进行绑定。"
