--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -217,6 +217,7 @@
     "default": "Something went wrong, please try again later or contact us to fix it.",
     "tooFrequent": "We've sent you the code. Please check your email or try again 10 minutes later.",
     "invalidCode": "Invalid code",
-    "invalidEmail": "This Email is not synced by any device"
+    "invalidEmail": "This Email is not synced by any device",
+    "bookNotFound": "Book is not found"
   }
 }
