--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -217,6 +217,7 @@
     "default": "发生错误，请重新再试，若状况持续，请联繫我们，谢谢！",
     "tooFrequent": "验证码已寄送，请至信箱查看。或是于 10 分钟后再试一次。",
     "invalidCode": "无效的验证码",
-    "invalidEmail": "此Email尚未绑定于任何装置"
+    "invalidEmail": "此Email尚未绑定于任何装置",
+    "bookNotFound": "找不到帐本"
   }
 }
