--- a/frontend/public/locale/zh-TW/common.json
+++ b/frontend/public/locale/zh-TW/common.json
@@ -217,6 +217,7 @@
     "default": "發生錯誤，請重新再試，若狀況持續，請聯繫我們，謝謝！",
     "tooFrequent": "驗證碼已寄送，請至信箱查看。或是於 10 分鐘後再試一次。",
     "invalidCode": "無效的驗證碼",
-    "invalidEmail": "此Email尚未綁定於任何裝置"
+    "invalidEmail": "此Email尚未綁定於任何裝置",
+    "bookNotFound": "找不到帳本"
   }
 }
