--- a/frontend/public/locale/jp/common.json
+++ b/frontend/public/locale/jp/common.json
@@ -24,7 +24,9 @@
     "copy": "コピー成功！",
     "exportTitle": "エクスポート",
     "exportHint": "取引明細をPDFファイルにエクスポートする",
-    "exportHintMore": "Export the transaction list into a pdf. There are {{n}} records in this book. It is recommeded to export pdf with computer."
+    "exportHintMore": "Export the transaction list into a pdf. There are {{n}} records in this book. It is recommeded to export pdf with computer.",
+    "donateTitle": "Donate Us",
+    "donateNote": "Thanks for using Bunny Bill! If you like our current results, you can donate us to provide better services."
   },
   "landing": {
     "title": "Bunny Bill",
@@ -105,9 +107,7 @@
     "settlement": "決済",
     "shouldReceive": "収受",
     "shouldPay": "返済",
-    "deleted": "削除された",
-    "donateTitle": "Donate Us",
-    "donateNote": "Thanks for using Bunny Bill! If you like our current results, you can donate us to provide better services."
+    "deleted": "削除された"
   },
   "bookSetting": {
     "back": "戻る",
@@ -171,7 +171,8 @@
     "friendHint": "Please input your friend's email",
     "warning1": "Note: Your friend's email must be synced to his/her device first",
     "warning2": "You can bind it in System Settings or find",
-    "warning3": "from book list page."
+    "warning3": "from book list page.",
+    "shareSuccess": "Share Succeeded! Your Friend can access to this book"
   },
   "share": {
     "join": "帳簿に参加しますか？",
