--- a/frontend/public/locale/zh-TW/common.json
+++ b/frontend/public/locale/zh-TW/common.json
@@ -24,7 +24,9 @@
     "copy": "複製成功！",
     "exportTitle": "匯出",
     "exportHint": "將收支明細匯出成一個 pdf 檔",
-    "exportHintMore": "將收支明細匯出成一個 pdf 檔。此帳本中有 {{n}} 筆紀錄，建議使用電腦匯出。"
+    "exportHintMore": "將收支明細匯出成一個 pdf 檔。此帳本中有 {{n}} 筆紀錄，建議使用電腦匯出。",
+    "donateTitle": "支持我們",
+    "donateNote": "感謝您使用 Bunny Bill！如果您喜歡我們目前的成果，可以通過贊助讓我們提供更完善的服務。"
   },
   "landing": {
     "title": "Bunny Bill",
@@ -102,12 +104,10 @@
     "billOutNote": "{{member}} 支付了 {{symbol}}{{amount}}",
     "billInNote": "{{member}} 收取了 {{symbol}}{{amount}}",
     "transferNote": "{{srcMember}} 轉帳 {{symbol}}{{amount}} 給 {{dstMember}}",
-    "settlement": "個人收支 / 結帳",
+    "settlement": "個人收支 / 結帳建議",
     "shouldReceive": "需收款",
     "shouldPay": "需還款",
-    "deleted": "已刪除",
-    "donateTitle": "支持我們",
-    "donateNote": "感謝您使用 Bunny Bill！如果您喜歡我們目前的成果，可以通過贊助讓我們提供更完善的服務。"
+    "deleted": "已刪除"
   },
   "bookSetting": {
     "back": "回帳本",
@@ -171,7 +171,8 @@
     "friendHint": "請輸入好友的綁定Email",
     "warning1": "注意：好友的Email 須先在他的裝置進行綁定",
     "warning2": "可在「系統設定」的「資料同步」中，或從",
-    "warning3": "進行綁定。"
+    "warning3": "進行綁定。",
+    "shareSuccess": "分享成功！好友已可進入此帳本"
   },
   "share": {
     "join": "加入此帳本？",
@@ -203,7 +204,7 @@
   },
   "settlement": {
     "back": "回帳本",
-    "check": "結帳",
+    "check": "結帳建議",
     "balance": "個人收支",
     "shouldPay": "需支付",
     "isCleared": "所有款項已結清"
