--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -3,6 +3,7 @@
   "language": "English",
   "act": {
     "confirm": "Confirm",
+    "ok": "Ok",
     "cancel": "Cancel",
     "submit": "Submit",
     "delete": "Delete",
@@ -172,7 +173,10 @@
     "warning1": "Note: Your friend's email must be synced to his/her device first",
     "warning2": "You can bind it in System Settings or find",
     "warning3": "from book list page.",
-    "shareSuccess": "Share Succeeded! Your Friend can access to this book"
+    "shareSuccess": "Share Succeeded! Your Friend can access to this book",
+    "invite1": "This Email is not synced by any device.",
+    "invite2": "Do you want to send the inviation to {{email}}?",
+    "inviteSuccess": "The invitation was sent"
   },
   "share": {
     "join": "Join this Book?",
@@ -218,7 +222,6 @@
     "default": "Something went wrong, please try again later or contact us to fix it.",
     "tooFrequent": "We've sent you the code. Please check your email or try again 10 minutes later.",
     "invalidCode": "Invalid code",
-    "invalidEmail": "This Email is not synced by any device",
     "bookNotFound": "Book is not found"
   }
 }
