--- a/frontend/public/locale/jp/common.json
+++ b/frontend/public/locale/jp/common.json
@@ -3,6 +3,7 @@
   "language": "日本語",
   "act": {
     "confirm": "確認",
+    "ok": "Ok",
     "cancel": "キャンセル",
     "submit": "送出",
     "delete": "削除",
@@ -172,7 +173,10 @@
     "warning1": "Note: Your friend's email must be synced to his/her device first",
     "warning2": "You can bind it in System Settings or find",
     "warning3": "from book list page.",
-    "shareSuccess": "Share Succeeded! Your Friend can access to this book"
+    "shareSuccess": "Share Succeeded! Your Friend can access to this book",
+    "invite1": "This Email is not synced by any device.",
+    "invite2": "Do you want to send the inviation to {{email}}?",
+    "inviteSuccess": "The invitation was sent"
   },
   "share": {
     "join": "帳簿に参加しますか？",
@@ -218,7 +222,6 @@
     "default": "エラーが発生しました。再試行してください。状況が続く場合は、お問い合わせください、ありがとうございます。",
     "tooFrequent": "We've sent you the code. Please check your email or try again 10 minutes later.",
     "invalidCode": "Invalid code",
-    "invalidEmail": "This Email is not synced by any device",
     "bookNotFound": "Book is not found"
   }
 }
