--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -3,6 +3,7 @@
   "language": "简体中文",
   "act": {
     "confirm": "确认",
+    "ok": "好",
     "cancel": "取消",
     "submit": "送出",
     "delete": "删除",
@@ -172,7 +173,10 @@
     "warning1": "注意：好友的Email 须先在他的装置进行绑定",
     "warning2": "可在「系统设定」的「资料同步」中，或从",
     "warning3": "进行绑定。",
-    "shareSuccess": "分享成功！好友已可进入此帐本"
+    "shareSuccess": "分享成功！好友已可进入此帐本",
+    "invite1": "此Email尚未绑定在任何装置中。",
+    "invite2": "寄送邀请连结到 {{email}} 吗？",
+    "inviteSuccess": "邀请已寄出"
   },
   "share": {
     "join": "加入此帐本？",
@@ -218,7 +222,6 @@
     "default": "发生错误，请重新再试，若状况持续，请联繫我们，谢谢！",
     "tooFrequent": "验证码已寄送，请至信箱查看。或是于 10 分钟后再试一次。",
     "invalidCode": "无效的验证码",
-    "invalidEmail": "此Email尚未绑定于任何装置",
     "bookNotFound": "找不到帐本"
   }
 }
