--- a/frontend/public/locale/jp/common.json
+++ b/frontend/public/locale/jp/common.json
@@ -116,7 +116,7 @@
     "deleteBook": "帳簿を削除",
     "showDeleted": "削除された取引を表示",
     "systemDeleteDate": "帳簿削除された日付",
-    "systemDeleteHint": "この帳簿が 100 日間更新されなかった場合、この帳簿のすべてのデータを自動的に削除します。",
+    "systemDeleteHint": "この帳簿が 1 年間更新されなかった場合、この帳簿のすべてのデータを自動的に削除します。",
     "rename": "名の変更",
     "deleteHint": "ここで削除できるのはこのデバイス上の記録のみであり、他のデバイス上の記録は影響を受けません。"
   },
