--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -221,7 +221,7 @@
   },
   "donateModal": {
     "title": "支持我们",
-    "note": "感谢您使用Bunny Bill！如果您喜欢我们目前的成果，可以通过贊助让我们提供更完善的服务。",
+    "note": "感谢您使用Bunny Bill！如果您喜欢我们目前的成果，可以透过贊助让我们提供更完善的服务。",
     "paypal": "Paypal",
     "ecpay": "ECPay"
   },
