--- a/frontend/public/locale/jp/common.json
+++ b/frontend/public/locale/jp/common.json
@@ -24,8 +24,8 @@
     "memo": "メモ",
     "copy": "コピー成功！",
     "exportTitle": "エクスポート",
-    "exportHint": "取引明細をPDFファイルにエクスポートする",
-    "exportHintMore": "Export the transaction list into a pdf. There are {{n}} records in this book. It is recommeded to export pdf with computer."
+    "exportHint": "収支明細をPDFファイルにエクスポートする",
+    "exportHintMore": "収支明細をPDFにまとめてエクスポートします。帳簿には {{n}} 件の記録があります。PCでの操作をおすすめします。"
   },
   "landing": {
     "title": "Bunny Bill",
@@ -49,7 +49,7 @@
     "language": "表示言語",
     "myId": "マイID",
     "myPaymentAccount": "私の支払いアカウント",
-    "dataSync": "Data Sync",
+    "dataSync": "データ同期",
     "add2HomeScreen": "ホーム画面に追加する",
     "contactUs": "お問い合わせ"
   },
@@ -69,17 +69,17 @@
     "deleteHint": "この支払いアカウントを削除しますか"
   },
   "dataSync": {
-    "back": "Back",
-    "head": "Data Sync",
-    "hint": "Bind your devices with an E-mail address to sync data.",
-    "label": "E-mail to bind",
-    "receiveCode": "Receive Code",
-    "bindHint": "The code has sent to your email, please check.",
-    "bindPlaceholder": "Code",
-    "bindSuccess": "Data sync successfully",
-    "unbind": "Unbind",
-    "unbindHead": "Unbind E-mail",
-    "unbindHint": "After unbinding, data added on this device will not be synchronized with other devices until the device is bound again."
+    "back": "戻る",
+    "head": "データ同期",
+    "hint": "メール連携すると、他の端末と同期できます。",
+    "label": "連携しているメール",
+    "receiveCode": "確認コード発行",
+    "bindHint": "確認コードを発行しました。メールにご確認ください。",
+    "bindPlaceholder": "確認コード",
+    "bindSuccess": "メール連携済み",
+    "unbind": "メール連携解除",
+    "unbindHead": "メールの連携解除",
+    "unbindHint": "連携を解除すると、この端末で追加したデータは、再び連携するまで他の端末と同期されなくなります。"
   },
   "add2HomeScreen": {
     "back": "戻る",
@@ -160,26 +160,26 @@
     "shareWithFriend": "帳簿を友達と共有する",
     "shareText": "帳簿「{{book}}」を共有するには、リンクをクリックしてください",
     "shareLink": "リンクを共有",
-    "inputEmail": "友達のEmail入力",
+    "inputEmail": "友達のメール入力",
     "edit": "メンバー編集",
     "deleteHint": "「{{nickname}}」を削除しますか？",
     "self": "私",
     "selfHint1": "「{{nickname}}」がニックネームを設定",
     "selfHint2": "「{{nickname}}」はニックネームではない",
     "emailPlaceholder": "aaa@xxxmail.com",
-    "friendHint": "Please input your friend's email",
-    "warning1": "Note: Your friend's email must be synced to his/her device first",
-    "warning2": "You can bind it in System Settings or find",
-    "warning3": "from book list page.",
-    "shareSuccess": "Share Succeeded! Your Friend can access to this book",
-    "invite1": "This Email is not synced by any device.",
-    "invite2": "Do you want to send the inviation to {{email}}?",
-    "inviteSuccess": "The invitation was sent"
+    "friendHint": "友達のメール入力してください。",
+    "warning1": "注意：友達のメールは端末で連携する必要がある",
+    "warning2": "「システム設定」の「データ同期」で連携できます、または",
+    "warning3": "あああああ",
+    "shareSuccess": "共有しました！友だちがこの帳簿を使えるようになりました。",
+    "invite1": "このメールは未連携です。",
+    "invite2": "{{email}} に招待リンクを送信しますか？",
+    "inviteSuccess": "招待リンクを送信しました。"
   },
   "share": {
     "join": "帳簿に参加しますか？",
-    "code": "コード",
-    "wrongCode": "コードが違い"
+    "code": "帳簿コード",
+    "wrongCode": "帳簿コードが違い"
   },
   "editTx": {
     "type": "項目",
@@ -220,15 +220,15 @@
     "skip": "スキップ"
   },
   "donateModal": {
-    "title": "Donate Us",
-    "note": "Thanks for using Bunny Bill! If you like our current results, you can donate us to provide better services.",
+    "title": "サポートする",
+    "note": "Bunny Billをご利用いただきありがとうございます。製品を気に入っていただけたら、ご支援でサービス向上につながります。",
     "paypal": "Paypal",
     "ecpay": "ECPay"
   },
   "error": {
     "default": "エラーが発生しました。再試行してください。状況が続く場合は、お問い合わせください、ありがとうございます。",
-    "tooFrequent": "We've sent you the code. Please check your email or try again 10 minutes later.",
-    "invalidCode": "Invalid code",
-    "bookNotFound": "Book is not found"
+    "tooFrequent": "確認コードを発行しました。メールにご確認ください、または10分後に再発行する",
+    "invalidCode": "無効確認コード",
+    "bookNotFound": "帳簿がない"
   }
 }
