--- a/frontend/public/locale/zh-TW/common.json
+++ b/frontend/public/locale/zh-TW/common.json
@@ -221,7 +221,7 @@
   },
   "donateModal": {
     "title": "支持我們",
-    "note": "感謝您使用 Bunny Bill！如果您喜歡我們目前的成果，可以通過贊助讓我們提供更完善的服務。",
+    "note": "感謝您使用 Bunny Bill！如果您喜歡我們目前的成果，可以透過贊助讓我們提供更完善的服務。",
     "paypal": "Paypal",
     "ecpay": "綠界"
   },
