--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -203,7 +203,20 @@
     "unitPct": "%",
     "modalTitle": "Share of {{nickname}}",
     "currency": "Currency",
-    "currencyHint": "Please go to book settings to configure currencies."
+    "currencyHint": "Please go to book settings to configure currencies.",
+    "validate": {
+      "descRequired": "Item is required",
+      "amountRequired": "Amount is required",
+      "payerInsufficient": "Insufficient split for payer",
+      "receiverInsufficient": "Insufficient split for receiver",
+      "sharerInsufficient": "Insufficient split for sharer",
+      "payerIncludeZero": "Amount for any payer must not be zero",
+      "receiverIncludeZero": "Amount for any receiver must not be zero",
+      "sharerIncludeZero": "Amount for any sharer must not be zero",
+      "srcMemberRequired": "Sender is required",
+      "dstMemberRequired": "Receiver is required",
+      "srcDstSame": "Sender and receiver must not be the same"
+    }
   },
   "settlement": {
     "back": "Back",
