--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -164,8 +164,8 @@
     "inputEmail": "Enter friend's Email",
     "edit": "Edit Profile",
     "deleteHint": "Delete \"{{nickname}}\"?",
-    "setVisibleHint": "Set \"{{nickname}}\" as visible?",
-    "setInvisibleHint": "Set \"{{nickname}}\" as invisible?",
+    "setVisibleHint": "Set \"{{nickname}}\" back as visible?",
+    "setInvisibleHint": "Set \"{{nickname}}\" as invisible? An insivible member will not be shown in the option of sharer. You can set it back anytime.",
     "self": "Me",
     "selfHint1": "set \"{{nickname}}\" as me",
     "selfHint2": "\"{{nickname}}\" is not me",
