--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -227,8 +227,9 @@
     "shouldPay": "Should pay",
     "isCleared": "All bills are cleared",
     "switch": "Switch",
-    "minimumPaymentMode": "Minimum times of payment",
-    "intuitionMode": "Only pay for those who owe"
+    "checkHint": "This is an optimized debt relationship, where you may be paying back someone you don't owe money to directly. There are many ways to settle a debt, but here are two common methods.",
+    "minimumPaymentMode": "At most one payment per person",
+    "intuitionMode": "Minimum times of payment"
   },
   "memberModal": {
     "head": "Select your nickname",
