call generate code api

--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -240,8 +240,8 @@
     "hint2": "帳本可永遠存在，不受停止更新1年後被系統移除的限制",
     "hint3": "支援搜尋功能",
     "warningHead": "注意事項",
-    "warningDesc": "以上功能僅限在單一帳本之中，因此請在訊息欄中填入帳本的ID，我們才能準確找到帳本進行升級作業！",
-    "codeHead": "帳本「ss」的ID",
+    "warningDesc": "以上功能僅限在單一帳本之中，因此請在訊息欄中填入帳本的專屬碼，我們才能準確找到帳本進行升級作業！",
+    "codeHead": "帳本「{{name}}」的專屬碼",
     "codeHint1": "若轉帳之後帳本未升級，或是忘記填寫帳本ID，請至",
     "codeHint2": "聯絡我們-升級帳本問題",
     "codeHint3": "告知我們。",
