add entry point in page of setting

--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -117,9 +117,11 @@
     "deleteBook": "Delete Book",
     "showDeleted": "Show Deleted Transactions",
     "systemDeleteDate": "System Clean up Date",
-    "systemDeleteHint": "If there is no any update for 1 year, the book would be removed by system.",
+    "systemDeleteHint": "If there is no any update for 1 year, the book would be removed by system. Or you can upgrade this book to permanently preserve it.",
     "rename": "Rename",
-    "deleteHint": "Note that this action would only delete the book in this device. It would not affect others' devices."
+    "deleteHint": "Note that this action would only delete the book in this device. It would not affect others' devices.",
+    "buttonUpgrade": "Permanatly preserve",
+    "permanent": "Permanently Preserved"
   },
   "currencySetting": {
     "back": "Back",
