--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -236,18 +236,18 @@
   "upgrade": {
     "back": "Back",
     "head": "Upgrade",
-    "hintDesc": "贊助我們 (至少 $1 USD)，升級此帳本，可以取得下列功能：",
-    "hintHead": "在這本帳本中",
-    "hint1": "無廣告",
-    "hint2": "帳本可永遠存在，不受停止更新1年後被系統移除的限制",
-    "hint3": "支援搜尋功能",
-    "warningHead": "注意事項",
-    "warningDesc": "以上功能僅限在單一帳本之中，因此請在訊息欄中填入帳本的專屬碼，我們才能準確找到帳本進行升級作業！",
-    "codeHead": "帳本「{{name}}」的專屬碼",
-    "codeHint1": "若轉帳之後帳本未升級，或是忘記填寫帳本ID，請至",
-    "codeHint2": "聯絡我們-升級帳本問題",
-    "codeHint3": "告知我們。",
-    "goToUpgrade": "前往升級"
+    "hintDesc": "Donate to us (at least $1 USD) to upgrade this account and gain access to the following features:",
+    "hintHead": "In this account",
+    "hint1": "No ads",
+    "hint2": "The account will exist forever and will not be removed by the system after 1 year of inactivity",
+    "hint3": "Supports search functionality",
+    "warningHead": "Notes",
+    "warningDesc": "The above features are limited to a single account. Please enter your account's unique code in the message field so we can accurately locate the account for the upgrade!",
+    "codeHead": "Unique code for account \"{{name}}\"",
+    "codeHint1": "If your account hasn't been upgraded after the transfer, or if you forgot to enter your account ID, please go to",
+    "codeHint2": "Contact Us - Account Upgrade Issues",
+    "codeHint3": "to let us know.",
+    "goToUpgrade": "Upgrade"
   },
   "memberModal": {
     "head": "Select your nickname",
