--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -119,7 +119,9 @@
     "systemDeleteDate": "系统移除日期",
     "systemDeleteHint": "若此帐本累积 1 年未更新，则系统将自动移除此帐本所有资料。",
     "rename": "重新命名",
-    "deleteHint": "此处仅能删除这台装置当中的记录，其他装置的记录不受影响"
+    "deleteHint": "此处仅能删除这台装置当中的记录，其他装置的记录不受影响",
+    "buttonUpgrade": "永久保留",
+    "permanent": "已永久保留"
   },
   "currencySetting": {
     "back": "回设定",
@@ -231,6 +233,22 @@
     "minimumPaymentMode": "每人最多还款一次",
     "intuitionMode": "最少还款次数"
   },
+  "upgrade": {
+    "back": "回上一页",
+    "head": "升级帐本",
+    "hintDesc": "贊助我们 (至少 $1 USD)，升级此帐本，可以取得下列功能：",
+    "hintHead": "在这本帐本中",
+    "hint1": "无广告",
+    "hint2": "帐本可永远存在，不受停止更新1年后被系统移除的限制",
+    "hint3": "支援搜寻功能",
+    "warningHead": "注意事项",
+    "warningDesc": "以上功能仅限在单一帐本之中，因此请在讯息栏中填入帐本的专属码，我们才能准确找到帐本进行升级作业！",
+    "codeHead": "帐本「{{name}}」的专属码",
+    "codeHint1": "若转帐之后帐本未升级，或是忘记填写帐本ID，请至",
+    "codeHint2": "联络我们-升级帐本问题",
+    "codeHint3": "告知我们。",
+    "goToUpgrade": "升级"
+  },
   "memberModal": {
     "head": "选择你的暱称",
     "hint": "也可之后再前往「帐本成员」新增属于你的暱称",
@@ -244,6 +262,9 @@
     "note": "感谢您使用Bunny Bill！如果您喜欢我们目前的成果，可以透过贊助让我们提供更完善的服务。",
     "paypal": "Paypal",
     "ecpay": "ECPay"
+  },
+  "adsense": {
+    "remove": "移除广告"
   },
   "error": {
     "default": "发生错误，请重新再试，若状况持续，请联繫我们，谢谢！",
