--- a/frontend/public/locale/zh-TW/common.json
+++ b/frontend/public/locale/zh-TW/common.json
@@ -119,7 +119,9 @@
     "systemDeleteDate": "系統移除日期",
     "systemDeleteHint": "若此帳本累積 1 年未更新，則系統將自動移除此帳本所有資料。",
     "rename": "重新命名",
-    "deleteHint": "此處僅能刪除這台裝置當中的記錄，其他裝置的記錄不受影響"
+    "deleteHint": "此處僅能刪除這台裝置當中的記錄，其他裝置的記錄不受影響",
+    "buttonUpgrade": "永久保留",
+    "permanent": "已永久保留"
   },
   "currencySetting": {
     "back": "回設定",
@@ -231,6 +233,22 @@
     "minimumPaymentMode": "每人最多還款一次",
     "intuitionMode": "最少還款次數"
   },
+  "upgrade": {
+    "back": "回上一頁",
+    "head": "升級帳本",
+    "hintDesc": "贊助我們 (至少 $1 USD)，升級此帳本，可以取得下列功能：",
+    "hintHead": "在這本帳本中",
+    "hint1": "無廣告",
+    "hint2": "帳本可永遠存在，不受停止更新1年後被系統移除的限制",
+    "hint3": "支援搜尋功能",
+    "warningHead": "注意事項",
+    "warningDesc": "以上功能僅限在單一帳本之中，因此請在訊息欄中填入帳本的專屬碼，我們才能準確找到帳本進行升級作業！",
+    "codeHead": "帳本「{{name}}」的專屬碼",
+    "codeHint1": "若轉帳之後帳本未升級，或是忘記填寫帳本ID，請至",
+    "codeHint2": "聯絡我們-升級帳本問題",
+    "codeHint3": "告知我們。",
+    "goToUpgrade": "升級"
+  },
   "memberModal": {
     "head": "選擇你的暱稱",
     "hint": "也可之後再前往「帳本成員」新增屬於你的暱稱",
@@ -244,6 +262,9 @@
     "note": "感謝您使用 Bunny Bill！如果您喜歡我們目前的成果，可以透過贊助讓我們提供更完善的服務。",
     "paypal": "Paypal",
     "ecpay": "綠界"
+  },
+  "adsense": {
+    "remove": "移除廣告"
   },
   "error": {
     "default": "發生錯誤，請重新再試，若狀況持續，請聯繫我們，謝謝！",
